# tulip_plugins

./: README.md
COPRA/: Copra.cpp  Copra.h
Cliques/: CliquePercolation.py  CliquesEnum.py  Eppstein.py
KPeaks/: KPeaks.py
LabelPropagation/: LabelPropagation.cpp  LabelPropagation.h
MetalArchivesScraping/: MAArtistScraping.py  MABandScraping.py  MASimilarBandsCrawling.py  MAUtils.py  README.md
MetalArchivesScrapping/: MABandScrapping.py  MADiscogScrapping.py  MASimilarBandsCrawling.py  README.md
MinimumSpanningTree/: mst.py  mst.pyo  unionfind.py  unionfind.pyo
SLPA/: SLPA.py
TimeVaryingFastestPaths/: AverageTravelTime.cpp  AverageTravelTime.h  CMakeLists.txt  FastestPathSelection.cpp  TimeDependentDijkstra.cpp  TimeDependentDijkstra.h
TransportationNetworks/: example_network.tlpx
TransportationNetworks/FlowBetweenness/: computeFlowBetweennessExample.py  flowbetweenness.cpp  flowbetweenness.h
TransportationNetworks/PhysarumSolver/: CMakeLists.txt  IterativeCycleSolver.h  PhysarumSolver.cpp  PhysarumSolver.h
TransportationNetworks/SPRouting/: sprouting.cpp  sprouting.h
TransportationNetworks/paper/data/: 20171117_res8unif_alpha.csv  20171128_res8zipf_alpha.csv  README  pdl_grid.tlpx
TransportationNetworks/paper/scripts/: README  distance.py  experiment_randomgrid.py  plot_exp_alpha.R  stats_experiments.py
VertexCycleCover/: SecretSanta.py  VertexCycleCover.py  maximumFlow.py
papers/NetFromSequentialData/: PathwayDetectionSimple.py  README.md  TVGLlyodsImport.py  res_AprilJuly2009.csv
papers/NetFromSequentialData/results/: res_Pathways.csv  (+2 more)
(+2 files in other folders)
